add status watch.
