# swagger/api/v1/manifest.swagger.json
@@ -48,6 +48,45 @@
           "CloudEventsService"
         ]
       }
+    },
+    "/v1/resources/{id}/status": {
+      "get": {
+        "operationId": "CloudEventsService_Watch",
+        "responses": {
+          "200": {
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/protobufCloudEvent"
+                },
+                "error": {
+                  "$ref": "#/definitions/googlerpcStatus"
+                }
+              },
+              "title": "Stream result of protobufCloudEvent"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "CloudEventsService"
+        ]
+      }
     }
   },
   "definitions": {
